// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> Default story renders snapshot 1`] = `
<div
  class="w-96"
>
  <div
    class="slider"
  >
    <label
      class="label"
      for=":r0:"
    >
      Slider Label
       
    </label>
    <input
      class="slider__input"
      id=":r0:"
      max="100"
      min="0"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="50"
    />
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> Disabled story renders snapshot 1`] = `
<div
  class="w-96"
>
  <div
    class="slider"
  >
    <label
      class="label slider__label--disabled"
      for=":r8:"
    >
      Slider Label
       
    </label>
    <input
      class="slider__input"
      disabled=""
      id=":r8:"
      max="5"
      min="1"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="3"
    />
    <div
      aria-hidden="true"
      class="slider__markers"
    >
      <p
        class="text text--body text--neutral-medium slider__marker slider__marker--disabled"
      >
        1
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker slider__marker--disabled"
      >
        2
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker slider__marker--disabled"
      >
        3
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker slider__marker--disabled"
      >
        4
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker slider__marker--disabled"
      >
        5
      </p>
    </div>
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> FieldNote story renders snapshot 1`] = `
<div
  class="w-96"
>
  <div
    class="slider"
  >
    <label
      class="label"
      for=":re:"
    >
      Slider Label
       
    </label>
    <input
      aria-describedby=":rf:"
      class="slider__input"
      id=":re:"
      max="100"
      min="0"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="50"
    />
    <div
      class="field-note"
      id=":rf:"
    >
      This is a fieldnote. It overrides the markers
    </div>
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> GeneratedMarkers story renders snapshot 1`] = `
<div
  class="w-96"
>
  <div
    class="slider"
  >
    <label
      class="label"
      for=":r4:"
    >
      Slider Label
       
    </label>
    <input
      class="slider__input"
      id=":r4:"
      max="5"
      min="1"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="3"
    />
    <div
      aria-hidden="true"
      class="slider__markers"
    >
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        1
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        2
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        3
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        4
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        5
      </p>
    </div>
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> MarkersLargeValues story renders snapshot 1`] = `
<div
  class="w-96"
>
  <div
    class="w-80"
  >
    <div
      class="slider"
    >
      <label
        class="label"
        for=":rc:"
      >
        Slider Label
         
      </label>
      <input
        class="slider__input"
        id=":rc:"
        max="10000"
        min="0"
        step="2500"
        style="--ratio: 0.5;"
        type="range"
        value="5000"
      />
      <div
        aria-hidden="true"
        class="slider__markers"
      >
        <p
          class="text text--body text--neutral-medium slider__marker"
        >
          0
        </p>
        <p
          class="text text--body text--neutral-medium slider__marker"
        >
          2500
        </p>
        <p
          class="text text--body text--neutral-medium slider__marker"
        >
          5000
        </p>
        <p
          class="text text--body text--neutral-medium slider__marker"
        >
          7500
        </p>
        <p
          class="text text--body text--neutral-medium slider__marker"
        >
          10000
        </p>
      </div>
      <div
        class="slider__thumb-proxy"
      />
    </div>
  </div>
</div>
`;

exports[`<Slider /> MarkersSmallValues story renders snapshot 1`] = `
<div
  class="w-96"
>
  <div
    class="slider"
  >
    <label
      class="label"
      for=":ra:"
    >
      Slider Label
       
    </label>
    <input
      class="slider__input"
      id=":ra:"
      max="5"
      min="1"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="3"
    />
    <div
      aria-hidden="true"
      class="slider__markers"
    >
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        1
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        2
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        3
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        4
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        5
      </p>
    </div>
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> NegativeNonIntegerMarkers story renders snapshot 1`] = `
<div
  class="w-96"
>
  <div
    class="slider"
  >
    <label
      class="label"
      for=":r6:"
    >
      Slider Label
       
    </label>
    <input
      class="slider__input"
      id=":r6:"
      max="1"
      min="-1"
      step="0.5"
      style="--ratio: 0.5;"
      type="range"
      value="0"
    />
    <div
      aria-hidden="true"
      class="slider__markers"
    >
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        -1
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        -0.5
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        0
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        0.5
      </p>
      <p
        class="text text--body text--neutral-medium slider__marker"
      >
        1
      </p>
    </div>
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;

exports[`<Slider /> NoVisibleLabel story renders snapshot 1`] = `
<div
  class="w-96"
>
  <div
    class="slider"
  >
    <input
      aria-label="Not visible slider label"
      class="slider__input"
      id=":r2:"
      max="100"
      min="0"
      step="1"
      style="--ratio: 0.5;"
      type="range"
      value="50"
    />
    <div
      class="slider__thumb-proxy"
    />
  </div>
</div>
`;
